--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "src/app/Components/FoodStoreResults/Page.jsx"  ],
   "exclude": [
     "node_modules"
   ]
