--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.5",
     "lucide-react": "^0.477.0",
     "next": "15.1.7",
     "react": "^19.0.0",
